[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/theboi.png" type="Texture" id=1]
[ext_resource path="res://MainMenu/SceneChange.gd" type="Script" id=2]
[ext_resource path="res://Buttons/Spin.gd" type="Script" id=3]

[node name="Buttons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Not this one" type="Button" parent="."]
margin_left = 49.7528
margin_top = 40.5321
margin_right = 211.753
margin_bottom = 196.532
icon = ExtResource( 1 )

[node name="Neither is this" type="Button" parent="."]
margin_left = 54.7528
margin_top = 210.532
margin_right = 216.753
margin_bottom = 366.532
icon = ExtResource( 1 )

[node name="No surf" type="Button" parent="."]
margin_left = 243.753
margin_top = 94.5322
margin_right = 405.753
margin_bottom = 250.532
icon = ExtResource( 1 )

[node name="Liver was stolen by mario" type="Button" parent="."]
margin_left = 462.753
margin_top = 230.532
margin_right = 624.753
margin_bottom = 386.532
icon = ExtResource( 1 )

[node name="The Boi" type="Button" parent="."]
margin_left = 262.656
margin_top = 326.095
margin_right = 424.656
margin_bottom = 482.095
icon = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = "res://Buttons/Trimp.tscn"

[node name="theboi" type="Sprite" parent="."]
position = Vector2( 165.284, 414.956 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 1 )
script = ExtResource( 3 )
[connection signal="pressed" from="The Boi" to="The Boi" method="_on_The_Boi_pressed"]
