[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tobec___.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu/SceneChange.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 75
font_data = ExtResource( 1 )

[node name="Gameover" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="HBoxContainer" parent="Main"]
margin_top = 85.0
margin_right = 1024.0
margin_bottom = 248.0
alignment = 1

[node name="Label" type="Label" parent="Main/Text"]
margin_left = 310.0
margin_right = 714.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "You died"

[node name="Button" type="HBoxContainer" parent="Main"]
margin_top = 252.0
margin_right = 1024.0
margin_bottom = 514.0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Main/Button"]
margin_left = 253.0
margin_right = 771.0
margin_bottom = 262.0

[node name="Menu" type="Button" parent="Main/Button/Buttons"]
margin_right = 518.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 2 )
text = "Back to Menu"
script = ExtResource( 2 )
scene_to_load = "res://MainMenu/MainMenu.tscn"

[node name="Quit" type="Button" parent="Main/Button/Buttons"]
margin_top = 133.0
margin_right = 518.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 3 )
text = "Coward"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Main/Button/Buttons/Menu" to="Main/Button/Buttons/Menu" method="_on_Menu_pressed"]
[connection signal="pressed" from="Main/Button/Buttons/Quit" to="Main/Button/Buttons/Quit" method="_on_Quit_pressed"]
